# density-tracer

./: CMakeLists.txt  README.md  main.cpp  main2D.cpp  main_orthographic.cpp
include/density-tracer/: image.h  julia.h  ppm.h  quaternion.h  ray.h  shapes.h  traceable.h
instances/: julia_with_ring.cpp
src/: CMakeLists.txt  image.cpp  julia.cpp  ppm.cpp  quaternion.cpp  ray.cpp  shapes.cpp  traceable.cpp
test/: CMakeLists.txt  test_quaternion.cpp  test_ray.cpp  test_traceable.cpp
