CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(density-tracer CXX)

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

ADD_EXECUTABLE(render main.cpp)
TARGET_LINK_LIBRARIES(render density-tracer)

ADD_EXECUTABLE(render2D main2D.cpp)
TARGET_LINK_LIBRARIES(render2D density-tracer)

ADD_EXECUTABLE(render-ortho main_orthographic.cpp)
TARGET_LINK_LIBRARIES(render-ortho density-tracer)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra --std=c++1z -fopenmp")
set(CMAKE_CXX_FLAGS_DEBUG "-g -pg")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
